# dragons

./: CMakeLists.txt  DimensionalDisc.h  Dragon.h  Func.h  House.cpp  House.h  MinSet.h  Plane.cpp  Plank.h  Prime.cpp  Prime.h  README.md  main.cpp
src/: Breath.cpp  Breath.h  Chain.h  DimensionalDisc.cpp  DimensionalDisc.h  DimensionalHouse.cpp  DimensionalHouse.h  Dragon.cpp  Dragon.h  DragonState.h  Dragons.cpp  Dragons.h  Edge.cpp  Edge.h  EdgeState.h  Filament.cpp  Filament.h  Func.cpp  Func.h  House.cpp  House.h  HouseState.h  MinSet.cpp  MinSet.h  Plane.h  Plank.cpp  Plank.h  Prime.cpp  Prime.h  Schema.cpp  Schema.h  SchemaState.h  SeptumDecum.cpp  SeptumDecum.h  Snip.cpp  Snip.h  Spell.cpp  Spell.h  Verse.cpp  Verse.h  (+1 more)
test/: TestChain.cpp  TestDimensionalDisc.cpp  TestDragon.cpp  TestEdge.cpp  TestHouse.cpp  TestMinSet.cpp  TestPlank.cpp  TestSchema.cpp
web/: index.html  index.js
